# qttube-youtube-plugin

./: .gitmodules  CMakeLists.txt  README.md  metadata.json  youtubeplayer.cpp  youtubeplayer.h  youtubeplugin.cpp  youtubeplugin.h
.github/workflows/: build.yml
res/: integration.js  interceptors.js  patches.js  styles.css
settings/: channelfiltertable.cpp  youtubesettings.cpp
settings/data-wizards/import/: grayjayimportwizard.cpp  pipedimportwizard.cpp
src/: youtubeauth.cpp  youtubeauth.h  youtubeplayer.cpp  youtubeplayer.h  youtubeplugin.cpp  youtubeplugin.h
src/settings/: channelfiltertable.cpp  youtubesettings.cpp  youtubesettings.h  youtubesettingsform.h
src/settings/data-wizards/import/: grayjayimportwizard.cpp  pipedimportwizard.cpp  takeoutimportwizard.cpp
src/settings/data-wizards/import/shared/: choosesubspage.cpp  choosewatchhistorypage.cpp
src/utils/: conversion.cpp  conversion.h  replydata.cpp  replydata.h  tubeutils.cpp
utils/: conversion.cpp  conversion.h  replydata.cpp  replydata.h  tubeutils.cpp  tubeutils.h
